Fixed issues on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,6 +23,12 @@ body {
 	margin: 0;
 	text-align: center;
 	-ms-overflow-style: none;
+	@media (max-width: 500px) {
+		font-size: 16px;
+	}
+	@media (max-width: 380px) {
+		font-size: 14px;
+	}
 }
 
 #insulter {
@@ -67,15 +73,20 @@ body {
 	}
 
 	h1 {
-		font-size: 3rem;
 		margin: 0 0 $padding/1.2;
-
+		text-align: center;
+		letter-spacing: 4px;
+		position: relative;
+		font-size: 5rem;
+		line-height: 1.2;
+		@media (max-width: 500px) {
+			font-size: 3.5rem;
+		}
+		@media (max-width: 380px) {
+			font-size: 2.5rem;
+		}
 		&.metal {
-			text-align: center;
-			letter-spacing: 4px;
-			position: relative;
-			font-size: 5rem;
-			line-height: 1.2;
+			
 
 			span {
 				position: absolute;
